// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsPassword addEmail call this.db.addEmail 1`] = `
[
  "id",
  "john.doe@gmail.com",
  true,
]
`;

exports[`AccountsPassword changePassword, invalidate all sessions and remove all reset password tokens from user storage call invalidateAllSessions 1`] = `
[
  undefined,
]
`;

exports[`AccountsPassword changePassword, invalidate all sessions and remove all reset password tokens from user storage call removeAllResetPasswordTokens 1`] = `
[
  undefined,
]
`;

exports[`AccountsPassword findUserByEmail call this.db.findUserByEmail 1`] = `
[
  "email",
]
`;

exports[`AccountsPassword findUserByUsername call this.db.findUserByUsername 1`] = `
[
  "email",
]
`;

exports[`AccountsPassword removeEmail call this.db.removeEmail 1`] = `
[
  "id",
  "email",
]
`;

exports[`AccountsPassword resetPassword reset password and invalidate all sessions 1`] = `
[
  "id",
]
`;

exports[`AccountsPassword resetPassword reset password and return tokens 1`] = `
[
  "id",
]
`;

exports[`AccountsPassword resetPassword validate user email if enrolled 1`] = `
[
  "id",
]
`;

exports[`AccountsPassword verifyEmail call this.db.verifyEmail 1`] = `
[
  undefined,
  "john.doe@gmail.com",
]
`;
